--- a/angular.json
+++ b/angular.json
@@ -34,16 +34,16 @@
             "production": {
               "budgets": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                    "type": "initial",
+                    "maximumWarning": "1mb",
+                    "maximumError": "2mb"
                 },
                 {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                    "type": "anyComponentStyle",
+                    "maximumWarning": "4kb",
+                    "maximumError": "6kb"
                 }
-              ],
+            ],
               "outputHashing": "all"
             },
             "development": {
